--- a/back/package.json
+++ b/back/package.json
@@ -12,7 +12,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/knex": "^0.16.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "dotenv-safe": "^8.2.0",
@@ -27,6 +26,7 @@
     "@types/jsonwebtoken": "^8.5.1",
     "@types/node": "^15.6.1",
     "ts-node-dev": "^1.1.6",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.2",
+    "@types/knex": "^0.16.1"
   }
 }
